[package]
name = "vortex_sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arrow-array = "*"
envy = "0.4"
futures-util = "0.3.31"
log = "0.4"
object_store = { version = "0.12.1", features = ["aws", "azure", "serde"] }
parquet = { version = "*", features = ["tokio", "arrow", "async", "object_store"] }
serde = "1.0"
serde_json = "1.0"
simplelog = "0.12"
tokio = { version = "1.45", features = ["full", "sync"] }
url = { version = "2.5", features = ["serde"] }
vortex = { git = "https://github.com/vortex-data/vortex.git", rev = "46cd33b7749a0ba7854353d911e68a0a047a2df1", features = ["tokio", "object_store", "parquet", "files"] }
vortex-io = { git = "https://github.com/vortex-data/vortex.git", rev = "46cd33b7749a0ba7854353d911e68a0a047a2df1", features = ["object_store", "tokio"]}
