[package]
name = "vortex_sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arrow-array = "*"
envy = "0.4"
futures-util = "0.3.31"
log = "0.4"
object_store = { version = "0.12.1", features = ["aws", "azure", "serde"] }
parquet = { version = "*", features = ["tokio", "arrow", "async", "object_store"] }
serde = "1.0"
serde_json = "1.0"
simplelog = "0.12"
tokio = { version = "1.45", features = ["full", "sync"] }
url = { version = "2.5", features = ["serde"] }
vortex = { git = "https://github.com/vortex-data/vortex.git", rev = "8e2f35bd9925d02f60c4714bed6448b7a3837fb7", features = ["tokio", "object_store", "parquet", "files"] }
vortex-io = { git = "https://github.com/vortex-data/vortex.git", rev = "8e2f35bd9925d02f60c4714bed6448b7a3837fb7", features = ["object_store", "tokio"]}
#vortex = { path = "../vortex/vortex", features = ["tokio", "object_store", "parquet", "files"] }
#vortex-io = { path = "../vortex/vortex-io", features = ["object_store", "tokio"] }
